WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269810
Regression(
274445@main
) Hang on twitch.tv when playing certain videos
https://bugs.webkit.org/show_bug.cgi?id=269810
Summary
Regression(274445@main) Hang on twitch.tv when playing certain videos
Chris Dumez
Reported
2024-02-20 13:39:46 PST
Hang on twitch.tv when playing certain videos since
274445@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-02-20 13:41:55 PST
<
rdar://123324508
>
Chris Dumez
Comment 2
2024-02-20 13:52:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24839
EWS
Comment 3
2024-02-20 15:42:29 PST
Committed
275075@main
(84643ce2ac86): <
https://commits.webkit.org/275075@main
> Reviewed commits have been landed. Closing PR #24839 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug