Regression(274445@main) Hang on twitch.tv when playing certain videos https://bugs.webkit.org/show_bug.cgi?id=269810 rdar://123324508

Unreviewed partial revert of 274445@main and full revert of the follow-up
fix in 274670@main as it appears to be causing hangs under
HTMLMediaElement::updateActiveTextTrackCues().

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::compareCueInterval):
(WebCore::HTMLMediaElement::updateActiveTextTrackCues):
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/html/shadow/MediaControlTextTrackContainerElement.cpp:
(WebCore::compareCueIntervalForDisplay):
(WebCore::MediaControlTextTrackContainerElement::updateDisplay):
(WebCore::MediaControlTextTrackContainerElement::updateActiveCuesFontSize):
* Source/WebCore/platform/PODInterval.h:

Canonical link: https://commits.webkit.org/275075@main